# CUPDAQ

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
DAQ/: CMakeLists.txt
DAQ/DAQ/: CupDAQManager.hh  CupGeneralTCB.hh
DAQ/config/: fadct.yml  fadct_mergekeys.yml
DAQ/inc/: CupDAQManager.hh  CupGeneralTCB.hh  daqopt.hh
DAQ/scripts/: send_daq_command.py
DAQ/src/: CupDAQManager.cc  CupDAQManager_build.cc  CupDAQManager_histogramer.cc  CupDAQManager_net.cc  CupDAQManager_rc.cc  CupDAQManager_read.cc  CupDAQManager_sort.cc  CupDAQManager_tfunc.cc  CupDAQManager_utils.cc  CupDAQManager_write.cc  CupDAQManager_write_gzip.cc  CupDAQManager_write_hdf5.cc  CupDAQManager_write_root.cc  CupGeneralTCB.cc  daqopt.cc
DAQ/test/: CMakeLists.txt  daq.cc  merger.cc  stddaq.cc  tcb.cc  tcbdaq.cc
DAQConfig/: CMakeLists.txt
DAQConfig/inc/: AbsConf.hh  AbsConfList.hh  DAQConf.hh  FADCSConf.hh  FADCTConf.hh  GADCSConf.hh  IADCTConf.hh  MADCSConf.hh  RunConfig.hh  SADCTConf.hh  TCBConf.hh
DAQConfig/src/: AbsConf.cc  AbsConfList.cc  DAQConf.cc  FADCSConf.cc  FADCTConf.cc  GADCSConf.cc  IADCTConf.cc  MADCSConf.cc  RunConfig.cc  SADCTConf.cc  TCBConf.cc  TriggerLookupTable.cc
DAQConfig/test/: test_tlt.cc
DAQSystem/: CMakeLists.txt
DAQSystem/DAQSystem/: AbsADC.hh  AbsTCB.hh  AmoreADC.hh  CupFADCS.hh  CupFADCT.hh  CupGADCS.hh  CupIADCT.hh  CupMADCS.hh  CupMiniTCB.hh  CupSADCT.hh  CupTCB.hh
DAQSystem/inc/: AbsADC.hh  AbsTCB.hh  AmoreADC.hh  CupFADCS.hh  CupFADCT.hh  CupGADCS.hh  CupIADCT.hh  CupMADCS.hh  CupMiniTCB.hh  CupSADCT.hh  CupTCB.hh
DAQSystem/src/: AbsADC.cc  AbsTCB.cc  AmoreADC.cc  CupFADCS.cc  CupFADCT.cc  CupGADCS.cc  CupIADCT.cc  CupMADCS.cc  CupMiniTCB.cc  CupSADCT.cc  CupTCB.cc
DAQTrigger/: CMakeLists.txt
DAQTrigger/inc/: AbsSoftTrigger.hh  PSMDTrigger.hh  WCMDTrigger.hh
DAQTrigger/src/: AbsSoftTrigger.cc  PSMDTrigger.cc  WCMDTrigger.cc
DAQUtils/: CMakeLists.txt
HDF5Utils/: CMakeLists.txt
HDF5Utils/HDF5Utils/: AbsH5Base.hh  AbsH5Event.hh  AbsH5Hit.hh  H5DataReader.hh  H5DataWriter.hh  H5FADCEvent.hh  H5FADCHit.hh  H5SADCEvent.hh  H5SADCHit.hh
HDF5Utils/src/: AbsH5Base.cc  H5DataReader.cc  H5DataWriter.cc  H5FADCEvent.cc  H5FADCHit.cc  H5SADCEvent.cc  H5SADCHit.cc
Notice/: CMakeLists.txt
Notice/inc/: NKAMOREADC.hh  NKFADC125S.hh  NKFADC500.hh  NKFADC500S.hh  NKIADC64.hh  NKSADC64.hh  NKTCB.hh  USB3Com.hh  USB3Tcb.hh
Notice/src/: NKAMOREADC.cc  NKFADC125S.cc  NKFADC500.cc  NKFADC500S.cc  NKIADC64.cc  NKMiniTCB.cc  NKSADC64.cc  NKTCB.cc  USB3Com.cc  USB3Tcb.cc  USBManager.cc
Notice/test/: test_minitcb.cc  test_usb3com.cc
OnlConsts/: CMakeLists.txt
OnlHistogramer/: CMakeLists.txt
OnlHistogramer/inc/: AbsHistogramer.hh  FADCHistogramer.hh  SADCHistogramer.hh
OnlHistogramer/src/: AbsHistogramer.cc  FADCHistogramer.cc  SADCHistogramer.cc
OnlObjs/: CMakeLists.txt
OnlObjs/inc/: ADCHeader.hh  AbsADCRaw.hh  BuiltEvent.hh  FADCRawEvent.hh  SADCRawEvent.hh
OnlObjs/src/: ADCHeader.cc  AbsADCRaw.cc  BuiltEvent.cc  FADCRawChannel.cc  FADCRawEvent.cc  SADCRawEvent.cc  TimeCalConsts.cc
RawObjs/: CMakeLists.txt
cmake/: CUPDAQHelpers.cmake  Config.cmake.in
